--- a/src/components/search-field/search-field.styles.scss
+++ b/src/components/search-field/search-field.styles.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin: 0 1em;
+  margin:0 1em;
   .search-input {
     width: 400px;
     height: 37px;
@@ -28,18 +28,33 @@
     }
   }
 }
+.profile-image{
+  width: 40px; 
+  height: 40px;
+  object-fit: "cover";
+}
 
 @media only screen and (max-width: 600px) {
   .search-form {
+    margin: 0;
     .search-input {
-      width: 200px;
+      width: auto;
     }
   }
 }
 @media only screen and (max-width: 400px) {
   .search-form {
+    margin: 0;
     .search-input {
-      width: 150px;
+      width: auto;
+      height: 30px;
+      font-size: smaller;
+      margin:0 3px;
     }
+  }
+  .profile-image{
+    width: 25px; 
+    height: 25px;
+    object-fit: "cover";
   }
 }
