--- a/src/components/search-field/search-field.styles.scss
+++ b/src/components/search-field/search-field.styles.scss
@@ -40,6 +40,9 @@
     .search-input {
       width: auto;
     }
+    .suggestion-list {
+      width: 170px;
+    }
   }
 }
 @media only screen and (max-width: 400px) {
