--- a/src/components/home-carousel/home-carousel.styles.css
+++ b/src/components/home-carousel/home-carousel.styles.css
@@ -22,4 +22,20 @@
   font-size: x-large;
   font-weight: 900;
 }
+
+.carousel-img {
+  width: 100%;
+  max-height: 600px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media only screen and (max-width: 600px) {
+  .carousel-img {
+    width: 100%;
+    min-height: 520px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
 /*# sourceMappingURL=home-carousel.styles.css.map */
