--- a/src/components/home-carousel/home-carousel.styles.scss
+++ b/src/components/home-carousel/home-carousel.styles.scss
@@ -14,3 +14,16 @@
         font-weight: 900;
     }
 }
+
+.carousel-img{
+    width: 100%; 
+    max-height: 600px; 
+    object-fit: cover;
+}
+@media only screen and (max-width: 600px){
+    .carousel-img{
+        width: 100%; 
+        min-height: 520px; 
+        object-fit: cover;
+    }
+  }
