--- a/src/components/profile-card/profile-card.styles.scss
+++ b/src/components/profile-card/profile-card.styles.scss
@@ -2,7 +2,7 @@
   min-width: 50vw;
   height: auto;
   padding: 2em;
-  margin:0 auto;
+  margin: 0 auto;
   background-color: #3a3030;
   display: flex;
   .profile-pic {
@@ -20,5 +20,14 @@
   }
   .profile-detail {
     text-align: left;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .profile-card {
+    padding: 0;
+    .profile-pic {
+      margin-right: 0em;
+    }
   }
 }
