--- a/src/custom.scss
+++ b/src/custom.scss
@@ -27,7 +27,6 @@ body {
     }
   }
 }
-
 .card-columns {
   @include media-breakpoint-only(sm) {
     column-count: 2;
@@ -37,5 +36,16 @@ body {
   }
   @include media-breakpoint-only(xl) {
     column-count: 3;
+  }
+}
+
+
+.navbar{
+  padding:1em 4em;
+}
+
+@media only screen and (max-width: 600px){
+  .navbar{
+    padding: 0.5em 0.5em !important;
   }
 }
