--- a/src/components/tags-input/tags-input.styles.css
+++ b/src/components/tags-input/tags-input.styles.css
@@ -53,4 +53,10 @@
 .tags-input input:focus {
   outline: transparent;
 }
+
+@media only screen and (max-width: 600px) {
+  .tags-input {
+    width: 245px;
+  }
+}
 /*# sourceMappingURL=tags-input.styles.css.map */
